# videoplay

./: Actions.qml  CMakeLists.txt  Content.qml  Mulu.qml  Open.qml  PlaySlider.qml  Playerv.qml  SoundSlider.qml  Vid.qml  change.txt  img.qrc  main.cpp  main.qml  qml.qrc  question.txt  videofunction.txt  videointernet.cpp  videointernet.h  videoplay.pro
qml/: Actions.qml  Content.qml  Open.qml  PlaySlider.qml  Playerv.qml  SoundSlider.qml  main.qml
videoplayer/: Actions.qml  Fileo.qml  Mulu.qml  Vid.qml  main.cpp  main.qml  videoplayer.pro
